<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_docs_more"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativelayout_docs_more_tab"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/image_button_docs_more_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:importantForAccessibility="no"
            android:src="@drawable/header_back" />

        <TextView
            android:id="@+id/textview_docs_more_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_docs"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativelayout_docs_more_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativelayout_docs_more_tab">

        <ImageView
            android:id="@+id/imageview_docs_more_folder"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no"
            android:src="@drawable/folder_2" />

        <TextView
            android:id="@+id/textview_docs_more_folder_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/imageview_docs_more_folder"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/small"
            tools:text="@string/activity_docs_tools_folder_title" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textview_docs_more_docs_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/long_title"
        android:textColor="@color/black"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/relativelayout_docs_more_folder"
        app:layout_constraintStart_toStartOf="@id/relativelayout_docs_more_folder"
        app:layout_constraintTop_toBottomOf="@id/relativelayout_docs_more_folder" />

    <TextView
        android:id="@+id/textview_docs_more_docs_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_regular"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toStartOf="@+id/textview_docs_more_docs_title"
        app:layout_constraintTop_toBottomOf="@+id/textview_docs_more_docs_title"
        tools:text="2024-03-12 오후 11:07" />

    <TextView
        android:id="@+id/textview_docs_more_docs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/docs"
        android:textColor="@color/black"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_docs_more_docs_datetime" />


    <RelativeLayout
        android:id="@+id/relativelayout_docs_more_rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/textview_docs_more_docs"
        app:layout_constraintTop_toBottomOf="@id/textview_docs_more_docs">

        <ImageButton
            android:id="@+id/image_button_docs_more_rename"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no"
            android:src="@drawable/rename" />

        <TextView
            android:id="@+id/textview_docs_more_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/normal"
            android:layout_toEndOf="@+id/image_button_docs_more_rename"
            android:text="@string/rename"
            android:textColor="@color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_docs_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/relativelayout_docs_more_rename"
        app:layout_constraintTop_toBottomOf="@id/relativelayout_docs_more_rename">

        <ImageButton
            android:id="@+id/image_button_docs_more_move"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no"
            android:src="@drawable/move_docs" />

        <TextView
            android:id="@+id/textview_docs_more_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/image_button_docs_more_move"
            android:text="@string/docs_more_move_docs"
            android:textColor="@color/black" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativelayout_docs_more_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/relativelayout_docs_move"
        app:layout_constraintTop_toBottomOf="@id/relativelayout_docs_move">

        <ImageButton
            android:id="@+id/image_button_docs_more_delete"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no"
            android:src="@drawable/delete_docs" />

        <TextView
            android:id="@+id/textview_docs_more_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/normal"
            android:layout_toEndOf="@+id/image_button_docs_more_delete"
            android:text="@string/docs_more_delete_docs"
            android:textColor="@color/red" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textview_docs_more_share_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textview_docs_more_docs"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout_docs_more_delete" />

    <RelativeLayout
        android:id="@+id/relativelayout_docs_more_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/textview_docs_more_share_title"
        app:layout_constraintTop_toBottomOf="@id/textview_docs_more_share_title">

        <ImageButton
            android:id="@+id/image_button_docs_more_share"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no"
            android:src="@drawable/share" />

        <TextView
            android:id="@+id/textview_docs_more_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/normal"
            android:layout_toEndOf="@+id/image_button_docs_more_share"
            android:text="@string/share_link"
            android:textColor="@color/black" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textview_docs_more_etc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/etc"
        android:textColor="@color/black"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textview_docs_more_share_title"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout_docs_more_share" />

    <RelativeLayout
        android:id="@+id/relativelayout_docs_more_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/textview_docs_more_etc_title"
        app:layout_constraintTop_toBottomOf="@id/textview_docs_more_etc_title">

        <ImageButton
            android:id="@+id/image_button_docs_more_statistics"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no"
            android:src="@drawable/statistics_2" />

        <TextView
            android:id="@+id/textview_docs_more_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/normal"
            android:layout_toEndOf="@+id/image_button_docs_more_statistics"
            android:text="@string/activity_docs_more_statistics"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_docs_more_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/relativelayout_docs_more_statistics"
        app:layout_constraintTop_toBottomOf="@id/relativelayout_docs_more_statistics">

        <ImageButton
            android:id="@+id/image_button_docs_more_quiz"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no"
            android:src="@drawable/quiz" />

        <TextView
            android:id="@+id/textview_docs_more_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/image_button_docs_more_quiz"
            android:text="@string/activity_docs_more_quiz"
            android:textColor="@color/black" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>