...
                <RelativeLayout
                    android:id="@+id/relativelayout_main_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageview_main_top"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/gradient_main"
                        android:importantForAccessibility="no" />

                    <androidx.viewpager.widget.ViewPager
...
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nested_scroll_view_main_top">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_main_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:scrollbarFadeDuration="0"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
